welcome.lessons.welcome.array.search.MaxValue.scala.error
maxValue:3: error: not found: value T
  for (i<- 0 to nums.length -1) {m=Math.max(m,T(i))}
                                              ^