welcome.lessons.welcome.array.search.MaxValue.scala.code
def maxValue(nums:Array[Int]): Int = {
  var m = nums(0)
  for (i<- 0 to nums.length -1) {m=Math.max(m,T(i))}
  return m}